fix ticker overlap.

--- a/src/app/_shared/header/header.component.scss
+++ b/src/app/_shared/header/header.component.scss
@@ -201,6 +201,9 @@ header {
 
     padding-left: 0rem;
     @media only screen and (min-width: 1024px) {
+      padding-left: 5rem;
+    }
+    @media only screen and (min-width: 1366px) {
       padding-left: 17rem;
     }
 
